--- a/learn-the-basics.ipynb
+++ b/learn-the-basics.ipynb
@@ -5,7 +5,8 @@
    "id": "8071dd38",
    "metadata": {},
    "source": [
-    "Hello, World!"
+    "Hello, World!\n",
+    "Exercise"
    ]
   },
   {
@@ -30,6 +31,62 @@
    "cell_type": "markdown",
    "id": "fadd3f7b",
    "metadata": {},
+   "source": [
+    "Variables and Types\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c3b99ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String: hello\n",
+      "Float: 10.000000\n",
+      "Integer: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystring = \"hello\"\n",
+    "myfloat = 10.0\n",
+    "myint = 20\n",
+    "\n",
+    "if mystring == \"hello\":\n",
+    "    print(\"String: %s\" % mystring)\n",
+    "if isinstance(myfloat, float) and myfloat == 10.0:\n",
+    "    print(\"Float: %f\" % myfloat)\n",
+    "if isinstance(myint, int) and myint == 20:\n",
+    "    print(\"Integer: %d\" % myint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fcb6043",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99f630cc",
+   "metadata": {},
+   "source": [
+    "Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e564ba1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
