--- a/learn-the-basics.ipynb
+++ b/learn-the-basics.ipynb
@@ -66,28 +66,507 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fcb6043",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "99f630cc",
    "metadata": {},
    "source": [
-    "Lists"
+    "Lists \n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4e564ba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "['hello', 'world']\n",
+      "The second name on the names list is Eric\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = []\n",
+    "strings = []\n",
+    "names = [\"John\", \"Eric\", \"Jessica\"]\n",
+    "\n",
+    "numbers.append(1)\n",
+    "numbers.append(2)\n",
+    "numbers.append(3)\n",
+    "\n",
+    "strings.append(\"hello\")\n",
+    "strings.append(\"world\")\n",
+    "\n",
+    "second_name = names[1]\n",
+    "\n",
+    "print(numbers)\n",
+    "print(strings)\n",
+    "print(\"The second name on the names list is %s\" % second_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64e1c85d",
+   "metadata": {},
+   "source": [
+    "Basic Operators\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d647afef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_list contains 10 objects\n",
+      "y_list contains 10 objects\n",
+      "big_list contains 20 objects\n",
+      "Almost there...\n",
+      "Great!\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = object()\n",
+    "y = object()\n",
+    "\n",
+    "x_list = [x] * 10\n",
+    "y_list = [y] * 10\n",
+    "big_list = x_list + y_list\n",
+    "\n",
+    "print(\"x_list contains %d objects\" % len(x_list))\n",
+    "print(\"y_list contains %d objects\" % len(y_list))\n",
+    "print(\"big_list contains %d objects\" % len(big_list))\n",
+    "\n",
+    "if x_list.count(x) == 10 and y_list.count(y) == 10:\n",
+    "    print(\"Almost there...\")\n",
+    "if big_list.count(x) == 10 and big_list.count(y) == 10:\n",
+    "    print(\"Great!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076b5e94",
+   "metadata": {},
+   "source": [
+    "String Formatting\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "120979b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello John Doe. Your current balance is $53.44.\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = (\"John\", \"Doe\", 53.44)\n",
+    "format_string = \"Hello %s %s. Your current balance is $%s.\"\n",
+    "\n",
+    "print(format_string % data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b8f05f5",
+   "metadata": {},
+   "source": [
+    "Basic String Operations \n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fa378f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of s = 20\n",
+      "The first occurrence of the letter a = 9\n",
+      "a occurs 2 times\n",
+      "The first five characters are 'Twent'\n",
+      "The next five characters are 'y cha'\n",
+      "The thirteenth character is 'c'\n",
+      "The characters with odd index are 'wnycaatr r'\n",
+      "The last five characters are 'rs or'\n",
+      "String in uppercase: TWENTY CHARACTERS OR\n",
+      "String in lowercase: twenty characters or\n",
+      "String starts with 'Twe'. Good!\n",
+      "String ends with ' or'. Good!\n",
+      "Split the words of the string: ['Twenty', 'characters', 'or']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Twenty characters or\"\n",
+    "print(\"Length of s = %d\" % len(s))\n",
+    "\n",
+    "print(\"The first occurrence of the letter a = %d\" % s.index(\"a\"))\n",
+    "\n",
+    "print(\"a occurs %d times\" % s.count(\"a\"))\n",
+    "\n",
+    "print(\"The first five characters are '%s'\" % s[:5]) # Start to 5\n",
+    "print(\"The next five characters are '%s'\" % s[5:10]) # 5 to 10\n",
+    "print(\"The thirteenth character is '%s'\" % s[12]) # Just number 12\n",
+    "print(\"The characters with odd index are '%s'\" %s[1::2]) #(0-based indexing)\n",
+    "print(\"The last five characters are '%s'\" % s[-5:]) # 5th-from-last to end\n",
+    "\n",
+    "print(\"String in uppercase: %s\" % s.upper())\n",
+    "\n",
+    "print(\"String in lowercase: %s\" % s.lower())\n",
+    "\n",
+    "if s.startswith(\"Twe\"):\n",
+    "    print(\"String starts with 'Twe'. Good!\")\n",
+    "\n",
+    "if s.endswith(\" or\"):\n",
+    "    print(\"String ends with ' or'. Good!\")\n",
+    "\n",
+    "# Split the string into three separate strings,\n",
+    "# each containing only a word\n",
+    "print(\"Split the words of the string: %s\" % s.split(\" \"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f975b6b",
+   "metadata": {},
+   "source": [
+    "Conditions\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "17a3f0c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 16\n",
+    "second_number = 0\n",
+    "first_array = [1,2,3]\n",
+    "second_array = [1,2]\n",
+    "\n",
+    "if number > 15:\n",
+    "    print(\"1\")\n",
+    "\n",
+    "if first_array:\n",
+    "    print(\"2\")\n",
+    "\n",
+    "if len(second_array) == 2:\n",
+    "    print(\"3\")\n",
+    "\n",
+    "if len(first_array) + len(second_array) == 5:\n",
+    "    print(\"4\")\n",
+    "\n",
+    "if first_array and first_array[0] == 1:\n",
+    "    print(\"5\")\n",
+    "\n",
+    "if not second_number:\n",
+    "    print(\"6\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dddb4bc9",
+   "metadata": {},
+   "source": [
+    "Loops\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c492190b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "402\n",
+      "984\n",
+      "360\n",
+      "408\n",
+      "980\n",
+      "544\n",
+      "390\n",
+      "984\n",
+      "592\n",
+      "236\n",
+      "942\n",
+      "386\n",
+      "462\n",
+      "418\n",
+      "344\n",
+      "236\n",
+      "566\n",
+      "978\n",
+      "328\n",
+      "162\n",
+      "758\n",
+      "918\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [\n",
+    "    951, 402, 984, 651, 360, 69, 408, 319, 601, 485, 980, 507, 725, 547, 544,\n",
+    "    615, 83, 165, 141, 501, 263, 617, 865, 575, 219, 390, 984, 592, 236, 105, 942, 941,\n",
+    "    386, 462, 47, 418, 907, 344, 236, 375, 823, 566, 597, 978, 328, 615, 953, 345,\n",
+    "    399, 162, 758, 219, 918, 237, 412, 566, 826, 248, 866, 950, 626, 949, 687, 217,\n",
+    "    815, 67, 104, 58, 512, 24, 892, 894, 767, 553, 81, 379, 843, 831, 445, 742, 717,\n",
+    "    958, 609, 842, 451, 688, 753, 854, 685, 93, 857, 440, 380, 126, 721, 328, 753, 470,\n",
+    "    743, 527\n",
+    "]\n",
+    "\n",
+    "for number in numbers:\n",
+    "    if number == 237:\n",
+    "        break\n",
+    "\n",
+    "    if number % 2 == 1:\n",
+    "        continue\n",
+    "\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db6787c2",
+   "metadata": {},
+   "source": [
+    "Functions\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "68b99039",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "More organized code is a benefit of functions!\n",
+      "More readable code is a benefit of functions!\n",
+      "Easier code reuse is a benefit of functions!\n",
+      "Allowing programmers to share and connect code together is a benefit of functions!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def list_benefits():\n",
+    "    return \"More organized code\", \"More readable code\", \"Easier code reuse\", \"Allowing programmers to share and connect code together\"\n",
+    "\n",
+    "def build_sentence(benefit):\n",
+    "    return \"%s is a benefit of functions!\" % benefit\n",
+    "\n",
+    "\n",
+    "def name_the_benefits_of_functions():\n",
+    "    list_of_benefits = list_benefits()\n",
+    "    for benefit in list_of_benefits:\n",
+    "        print(build_sentence(benefit))\n",
+    "\n",
+    "name_the_benefits_of_functions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dfeabdb",
+   "metadata": {},
+   "source": [
+    "Classes and Objects\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d66caeac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fer is a red convertible worth $60000.00.\n",
+      "Jump is a blue van worth $10000.00.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    name = \"\"\n",
+    "    kind = \"car\"\n",
+    "    color = \"\"\n",
+    "    value = 100.00\n",
+    "    def description(self):\n",
+    "        desc_str = \"%s is a %s %s worth $%.2f.\" % (self.name, self.color, self.kind, self.value)\n",
+    "        return desc_str\n",
+    "\n",
+    "car1 = Vehicle()\n",
+    "car1.name = \"Fer\"\n",
+    "car1.color = \"red\"\n",
+    "car1.kind = \"convertible\"\n",
+    "car1.value = 60000.00\n",
+    "\n",
+    "car2 = Vehicle()\n",
+    "car2.name = \"Jump\"\n",
+    "car2.color = \"blue\"\n",
+    "car2.kind = \"van\"\n",
+    "car2.value = 10000.00\n",
+    "\n",
+    "print(car1.description())\n",
+    "print(car2.description())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea0882c",
+   "metadata": {},
+   "source": [
+    "Dictionaries\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "367dede5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jake is listed in the phonebook.\n",
+      "Jill is not listed in the phonebook.\n"
+     ]
+    }
+   ],
+   "source": [
+    "phonebook = {  \n",
+    "    \"John\" : 938477566,\n",
+    "    \"Jack\" : 938377264,\n",
+    "    \"Jill\" : 947662781\n",
+    "}  \n",
+    "\n",
+    "phonebook[\"Jake\"] = 938273443  \n",
+    "del phonebook[\"Jill\"]  \n",
+    "\n",
+    "# testing code\n",
+    "if \"Jake\" in phonebook:  \n",
+    "    print(\"Jake is listed in the phonebook.\")\n",
+    "    \n",
+    "if \"Jill\" not in phonebook:      \n",
+    "    print(\"Jill is not listed in the phonebook.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75e23332",
+   "metadata": {},
+   "source": [
+    "Modules and Packages\n",
+    "Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a09c35db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['findall', 'finditer']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "find_members = []\n",
+    "for member in dir(re):\n",
+    "    if \"find\" in member:\n",
+    "        find_members.append(member)\n",
+    "\n",
+    "print(sorted(find_members))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec75ef6c",
+   "metadata": {},
+   "source": [
+    "Input and Output \n",
+    "Exercise\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e564ba1",
+   "id": "11a99bb0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 7) (826909644.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(\"Hello, my name is {}, I am {} years old, and I am from {}.\".format(name, age, country)) name is {}, I am {} years old, and I am from {}.\".format(name, age, country))\u001b[39m\n                                                                                                                                                   ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Enter your name: \")\n",
+    "\n",
+    "age = int(input(\"Enter your age: \"))\n",
+    "\n",
+    "country = input(\"Enter your country: \")\n",
+    "\n",
+    "print(\"Hello, my name is {}, I am {} years old, and I am from {}.\".format(name, age, country)) name is {}, I am {} years old, and I am from {}.\".format(name, age, country))"
+   ]
   }
  ],
  "metadata": {
