--- a/learn-the-basics.ipynb
+++ b/learn-the-basics.ipynb
@@ -5,8 +5,9 @@
    "id": "8071dd38",
    "metadata": {},
    "source": [
-    "Hello, World!\n",
-    "Exercise"
+    "## **Hello, World!**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -32,8 +33,9 @@
    "id": "fadd3f7b",
    "metadata": {},
    "source": [
-    "Variables and Types\n",
-    "Exercise"
+    "## **Variables and Types**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -70,8 +72,9 @@
    "id": "99f630cc",
    "metadata": {},
    "source": [
-    "Lists \n",
-    "Exercise"
+    "## **Lists**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -114,8 +117,9 @@
    "id": "64e1c85d",
    "metadata": {},
    "source": [
-    "Basic Operators\n",
-    "Exercise"
+    "## **Basic Operators**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -159,8 +163,9 @@
    "id": "076b5e94",
    "metadata": {},
    "source": [
-    "String Formatting\n",
-    "Exercise"
+    "## **String Formatting**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -189,8 +194,9 @@
    "id": "4b8f05f5",
    "metadata": {},
    "source": [
-    "Basic String Operations \n",
-    "Exercise"
+    "## **Basic String Operations**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -253,8 +259,9 @@
    "id": "6f975b6b",
    "metadata": {},
    "source": [
-    "Conditions\n",
-    "Exercise"
+    "## **Conditions**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -306,8 +313,9 @@
    "id": "dddb4bc9",
    "metadata": {},
    "source": [
-    "Loops\n",
-    "Exercise"
+    "## **Loops**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -371,8 +379,9 @@
    "id": "db6787c2",
    "metadata": {},
    "source": [
-    "Functions\n",
-    "Exercise"
+    "## **Functions**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -413,8 +422,9 @@
    "id": "9dfeabdb",
    "metadata": {},
    "source": [
-    "Classes and Objects\n",
-    "Exercise"
+    "## **Classes and Objects**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -463,8 +473,9 @@
    "id": "7ea0882c",
    "metadata": {},
    "source": [
-    "Dictionaries\n",
-    "Exercise"
+    "## **Dictionaries**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -505,8 +516,9 @@
    "id": "75e23332",
    "metadata": {},
    "source": [
-    "Modules and Packages\n",
-    "Exercise"
+    "## **Modules and Packages**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
@@ -539,13 +551,14 @@
    "id": "ec75ef6c",
    "metadata": {},
    "source": [
-    "Input and Output \n",
-    "Exercise\n"
+    "## **Input and Output**\n",
+    "\n",
+    "**Exercise**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "11a99bb0",
    "metadata": {},
    "outputs": [
